Fixed nav on mobile
*(hopefully)*

--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.4.0
+@version        1.4.1
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn [(www.mandorinn.dev)], faucet [(https://e621.net/users/601225)]
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
@@ -3244,7 +3244,7 @@ if themep == classic {
 	div#page {
 		overflow: hidden;
 	}
-	body.resp #maintoggle {
+	body[data-sticky] #maintoggle {
 		display:none;
 	}
 	header#top nav#nav {
